# clipway

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
packaging/linux/: clipway-daemon.desktop  clipway-tray.desktop  clipway.desktop  clipway.service  install-local.sh  install-system.sh  package-release.sh  self-check.sh
src/: app.rs  clipboard.rs  daemon.rs  main.rs  paths.rs  storage.rs  tray.rs
